--- a/index.html
+++ b/index.html
@@ -4,21 +4,39 @@
 	<meta charset="UTF-8">
 	<title>Aprendiendo Angular</title>
 
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body ng-controller="MainController">
 
 	<header>
+	  <div class="container"></div>
+	  <img src="images/logo-confianza.jpg">
+	  <i class="fa fa-bars" aria-hidden="true" ng-click="toggleMenu()"></i>
+	  	  
 	</header>
 
+	<!--nav ng-show="showMenu"-->
+	<nav ng-show="{show:showMenu}">	
+		<ul>
+			<li><a href="#/">Inicio</a></li>
+			<li><a href="#/accounts">Cuentas</a></li>
+			<li><a href="#/add-account">Crear Cuenta</a></li>
+		</ul>
+	</nav>
+
 	<section id="main-content">
+		<div class="container">
 		<div ng-view></div>
+		</div>
 	</section>
 
 	<footer>
 		<p>Atypax | Todos los derechos reservados</p>
 	</footer>
-	
+	<script src="js/jquery-3.1.1.js"></script>
+	<script src="js/bootstrap.js"></script>
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.js"></script>
 	<script src="js/app.js"></script>
